# shipyard

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: tests.yaml
src/archived/: 2025-06-17--yaml-scalars.md  2025-06-24--uuid-v4-vs-v7.md  2025-07-01--sql-is-not-distinct-from.md  2025-07-15--yaml-tags.md  2025-07-22--wtfi-dbt-contracts.md  2025-08-05--json-json5-jsonl-yaml.md  2025-08-12--python-arguably.md  2025-08-19--mkdocs.md  2025-09-02--say-no-to-dbt-macros.md  2025-09-09--shell-commands-in-envrc.md  2025-09-23--uv-tools.md  2025-09-30--conventional-commits.md  2025-10-14--gitmojis-and-bigquery-with-expression.md  2025-10-28--merge-commit-and-custom-git-subcommands.md  2025-11-04--nested-file-in-ide.md  2025-11-11--dev-containers.md  2025-11-25--make-is-not-a-task-runner-and-git-switch.md  2025-12-09--a-good-python-docstring.md  2025-12-16--json-yaml-toml-and-json-schema.md  2026-01-13--git-format-patch-and-git-apply.md  2026-01-27--concat_ws-in-tsql-vs-snowflake.md  2026-02-10--git-worktrees.md  2026-03-10--github-code-blocks-and-commit-urls.md  2026-03-24--build-your-own-pre-commit-hook.md  2026-04-07--cte-materialisation.md
src/hooks/: notion_to_markdown.py
src/python_template/: main.py
src/upcoming/: build-your-own-python-cli.md  casing.md  cte-materialisation.md  dbml.md  dbt-node-selection.md  dun-dun-duuun-ders.md  everything-is-a-contract.md  feature-flags.md  file-watchers.md  git-rebase.md  intentional-sql.md  jetbrains-data-extractors.md  jetbrains-http-client.md  magic-values.md  making-github-prs-work-for-you.md  poethepoet.md  python-assert-vs-raise.md  python-src-layout.md  restructuredtext.md  returning-star-and-data-modifying-ctes.md  some-cli-features.md  sql-for-table-diffing.md  sql-interval-keyword.md  testing-primer.md  using-using.md  whats-an-api.md  whats-an-interface.md  why-1=1-in-prod.md
tests/python_template/: test__main.py
